--- a/css/style.css
+++ b/css/style.css
@@ -2336,6 +2336,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -webkit-box-flex: 1;
       -ms-flex: 1 1 100%;
           flex: 1 1 100%;
+          border-radius: 10px;
           
 }
 
@@ -4136,59 +4137,35 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
   .icon-menu {
     margin-left: calc(15px + 17 * ((100vw - 320px)/ 950));
-}
-
-  .icon-menu {
-    margin-left: 32px;
     position: relative;
-    display: block;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 30px;
-            flex: 0 0 30px;
-    height: 18px;
+    display: inline-block;
+    height: 30px;
     cursor: pointer;
     z-index: 5;
   }
-
+  
   .icon-menu span {
-    -webkit-transition: all 0.3s ease 0s;
-    -o-transition: all 0.3s ease 0s;
-    transition: all 0.3s ease 0s;
-    top: calc(50% - 1px);
-    left: 0px;
     position: absolute;
-    width: 100%;
+    width: 30px;
     height: 2px;
     background-color: #000;
+    transition: all 0.3s ease;
   }
-
+  
   .icon-menu span:first-child {
-    top: 0px;
+    top: 0;
   }
-
+  
   .icon-menu span:last-child {
-    top: auto;
-    bottom: 0px;
+    bottom: 0;
   }
-
-  .icon-menu._active span {
-    -webkit-transform: scale(0);
-        -ms-transform: scale(0);
-            transform: scale(0);
-  }
-
+  
   .icon-menu._active span:first-child {
-    -webkit-transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    top: calc(50% - 1px);
+    transform: rotate(-45deg) translateY(8px);
   }
-
+  
   .icon-menu._active span:last-child {
-    -webkit-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-            transform: rotate(45deg);
-    bottom: calc(50% - 1px);
+    transform: rotate(45deg) translateY(-8px);
   }
 
   .menu-footer__column {
