--- a/css/style.css
+++ b/css/style.css
@@ -2778,6 +2778,11 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
       align-self: flex-end;
 }
 
+.main-slider__slider img {
+  width: 100%;
+  object-fit: cover;
+}
+
 .content-main {
   position: relative;
   z-index: 5;
