--- a/css/style.css
+++ b/css/style.css
@@ -2314,7 +2314,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 
 .menu__link {
   font-weight: 700;
-  color: #fff;
+  color: #cf9a01;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
   transition: color 0.3s ease 0s;
@@ -2326,7 +2326,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   font-size: 8px;
-  color: #fff;
+  color: #cf9a01;
 }
 
 .menu__sub-list {
@@ -2413,7 +2413,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .actions-header__item_favorites {
-  color: #fff;
+  color: #cf9a01;;
   font-size: 24px;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
@@ -2428,7 +2428,8 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
 }
 
 .cart-header__icon {
-  color: #fff;
+ color: #cf9a01;
+;
   font-size: 24px;
   -webkit-transition: color 0.3s ease 0s;
   -o-transition: color 0.3s ease 0s;
@@ -2546,9 +2547,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   margin: 0px 0px 15px 0px;
 }
 
-.icon-menu {
-  display: none;
-}
+
 
 .footer__body {
   border-top: 1px solid #d8d8d8;
@@ -4069,7 +4068,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
     overflow: auto;
     top: 0;
     left: -100%;
-    background-color: #fcf8f3;
+    background-image: linear-gradient(to right, #000000, #501E1F, #9A4505);
     -webkit-transition: left 0.3s ease 0s;
     -o-transition: left 0.3s ease 0s;
     transition: left 0.3s ease 0s;
@@ -4141,36 +4140,39 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   }
 
   .icon-menu {
-    margin-left: calc(15px + 17 * ((100vw - 320px)/ 950));
-    position: relative;
-    display: inline-block;
-    height: 30px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9999;
+    background-color: linear-gradient(to right, #f3b25d, #955c14, #fcc98a);
+    border-width: 3px 2px 3px 2px;
+    border-style: solid;
+    border-color: #fac480 #f3b35e #be7f2e #f3b35e;
+    box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 0.2);
+    transform: scale(1);
+    transition: transform 0.3s;
     cursor: pointer;
-    z-index: 5;
+    border-radius: 50%;
+    font-size: 24px;
   }
   
   .icon-menu span {
-    position: absolute;
-    width: 30px;
-    height: 2px;
+    display: block;
+    width: 40px;
+    height: 4px;
+    margin-bottom: 4px;
     background-color: #000;
-    transition: all 0.3s ease;
   }
   
-  .icon-menu span:first-child {
-    top: 0;
-  }
-  
-  .icon-menu span:last-child {
-    bottom: 0;
-  }
-  
+  /* Додайте стилі для активного стану кнопки при необхідності */
   .icon-menu._active span:first-child {
-    transform: rotate(-45deg) translateY(8px);
+    transform: rotate(-45deg);
+    top: calc(50% - 1px);
   }
   
   .icon-menu._active span:last-child {
-    transform: rotate(45deg) translateY(-8px);
+    transform: rotate(45deg);
+    bottom: calc(50% - 1px);
   }
 
   .menu-footer__column {
