--- a/css/style.css
+++ b/css/style.css
@@ -4168,7 +4168,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background-color: #805722;
+      background-color: #5f3f15;
       box-shadow: 0px 4px 0px 0px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s;
     }
